--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -5,10 +5,13 @@
 # --- 1. Default Component Combination ---
 # Hydra will load the corresponding yaml file from each sub-directory.
 defaults:
-  - data: davis  # Default dataset to use
+  - data: DrugBank  # Default dataset to use
   - encoder: ndls_homo
   - predictor: gbdt
+  - relations: DP_no_sim
   - _self_  # This line is important, it tells Hydra to also load the rest of this file.
+
+
 
 data:
   subfolders:
@@ -19,7 +22,14 @@ data:
     raw:
       dti_interactions: "full.csv"
     processed:
-        typed_edge_list_template: "typed_edges_suffix-{relations_suffix}.csv"
+        typed_edge_list_template: "typed_edges-{relations_suffix}.csv"
+        abbr: 
+          dp_interaction: dp
+          lp_interaction: lp
+          pp_similarity: pp
+          dd_similarity: dd
+          dl_similarity: dl
+          ll_similarity: ll
         link_prediction_labels: "dl_p_edges.csv"
         nodes_metadata: "nodes.csv"
         node_features: "features.csv"
@@ -30,37 +40,34 @@ data:
           drug: "indexes/drug2index.pkl"
           ligand: "indexes/ligand2index.pkl"
           protein: "indexes/prot2index.pkl"
+    gtopdb:
+      raw:
+        interactions: "interactions.csv"
+        ligands: "ligands.csv"
+        targets: "targets_and_families.csv"
+      processed:
+        ligands: "gtopdb_ligands.csv"
+        proteins: "gtopdb_proteins.csv"
+        interactions: "gtopdb_p-l_edges.csv"
 # --- 2. Global Parameters (that don't belong to a specific component) ---
 # These are mostly parameters for data processing and evaluation
 training:
   paradigm: "two_stage" # Or can be inferred. Let's keep it simple for now.
-  k_folds: 5
+  k_folds: 10
 
 params:
   protein_similarity_threshold: 0.8
   max_pp_edges: 500
-  include_relations:
-    abbreviations:
-      dp_interaction: "dp"
-      lp_interaction: "lp"
-      pp_similarity: "pp"
-      dd_similarity: "dd"
-      dl_similarity: "dl"
-      ll_similarity: "ll"
-    flags:
-      dp_interaction: true
-      lp_interaction: true
-      pp_similarity: true
-      dd_similarity: true
-      dl_similarity: true
-      ll_similarity: true
+  molecule_similarity_threshold: 0.988 # Used for D-D, L-L
+  drug_ligand_similarity_threshold: 0.7 # A separate, more lenient threshold
+  gtopdb_max_affinity_nM: 10000
+  negative_sampling_strategy: "popular" # Options: "uniform", "popular"
 
 runtime:
   seed: 514
   cpus: 80
   gpu: "cuda:1"
   force_restart: false
-  output_dir: "outputs/${data.primary_dataset}/${training.paradigm}/${encoder.name}"
 
 mlflow:
   tracking_uri: "mlruns"
