--- a/conf/predictor/gbdt.yaml
+++ b/conf/predictor/gbdt.yaml
@@ -1,8 +1,6 @@
 name: gbdt
-n_estimators: 500
+n_estimators: 499
 max_depth: 7
 # Training hyperparameters
-learning_rate: 0.001
-weight_decay: 0.0005
-epochs: 200
-batch_size: 512 # For sampling edges during training
+learning_rate: 0.1
+subsample: 0.85
