--- a/conf/predictor/gbdt.yaml
+++ b/conf/predictor/gbdt.yaml
@@ -1,6 +1,7 @@
 name: gbdt
-n_estimators: 500
-max_depth: 7
-# Training hyperparameters
-learning_rate: 0.1
-subsample: 1.0
+params:
+  n_estimators: 500
+  max_depth: 7
+  # Training hyperparameters
+  learning_rate: 0.1
+  subsample: 1.0
