--- a/conf/training/rgcn-colddrug.yaml
+++ b/conf/training/rgcn-colddrug.yaml
@@ -4,6 +4,7 @@ paradigm: "end_to_end" # Or can be inferred. Let's keep it simple for now.
 evaluation:
     mode: "drug"
     test_fraction: 0.2
+    supervision_ratio: 0.2
     k_folds: 1
     train_file_suffix: "_train"
     test_file_suffix: "_test"
