大幅调整了文件结构,data_utils修改,现在是0.5最终版,接下来开始着手跑分

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -61,6 +61,8 @@ runtime:
   gpu: "cuda:1"
   force_restart: false
   sim_restart: false
+  debug: true
+
 
 mlflow:
   tracking_uri: "logs/mlruns" #TODO: logs
