--- a/conf/training/rgcn-random.yaml
+++ b/conf/training/rgcn-random.yaml
@@ -1,7 +1,7 @@
-name: "rgcn-colddrug"
+name: "rgcn-random"
 
 evaluation:  #TODO: 重构整合
-    mode: "drug"
+    mode: "random"
     test_fraction: 0.2
     k_folds: 5
 
