--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -55,6 +55,19 @@ data:
     model_name: "seyonec/ChemBERTa-zinc-base-v1"
     batch_size: 64 # 通常可以比蛋白质的batch size更大
 
+params:
+  similarity_thresholds:
+    protein_protein: 0.8 # 对应 protein_protein_similarity
+    drug_drug: 0.988 # 对应 drug_drug_similarity
+    ligand_ligand: 0.988 # 对应 ligand_ligand_similarity, 复用同一个严格阈值
+    drug_ligand: 0.7 # 对应 drug_ligand_similarity, 使用一个更宽松的阈值
+
+  # --- 其他参数保持不变 ---
+  max_pp_edges: 500
+  gtopdb_max_affinity_nM: 10000
+  negative_sampling_strategy: "popular"
+  affinity_threshold_nM: 10000
+
 # --- 2. Global Parameters (that don't belong to a specific component) ---
 # These are mostly parameters for data processing and evaluation
 #会影响性能的参数放在这里
