--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,76 +1,12 @@
 defaults:
-  - data: DrugBank # Default dataset to use
+  - data_structure: bindingdb # 描述文件架构与文件内列的名字,与最终实际内容无关
   - predictor: rgcn
   - relations: DP_sim
-  - params: default
+  - data_params: base #数据处理相关,且影响最终数据内容的参数
   - analysis: split_diff # 仅仅在分析时用到
-
   - _self_ # This line is important, it tells Hydra to also load the rest of this file.
 
-#主要是有关数据处理的,影响结果的参数与文件结构描述
-data:
-  subfolders:
-    raw: "raw"
-    processed: "processed"
-  use_gtopdb: false
-  files:
-    raw:
-      dti_interactions: "full.csv"
-    processed:
-      common:
-        nodes_metadata: "nodes.csv"
-        node_features: "node_features.npy"
-        feature_caches:
-          molecule_embeddings: "feature_caches/molecule_features.pkl"
-          protein_embeddings: "feature_caches/esm_protein_features.pkl"
-        similarity_matrices:
-          molecule: "sim_matrixes/dl_similarity_matrix.pkl"
-          protein: "sim_matrixes/prot_similarity_matrix.pkl"
-        indexes:
-          drug: "indexes/drug2index.pkl"
-          ligand: "indexes/ligand2index.pkl"
-          protein: "indexes/prot2index.pkl"
-
-      specific:
-        graph_template: "{prefix}_graph_{suffix}.csv" #最后是{fold_idx}-train/test
-        labels_template: "{prefix}_labels_{suffix}.csv"
-    gtopdb:
-      raw:
-        interactions: "interactions.csv"
-        ligands: "ligands.csv"
-        targets: "targets_and_families.csv"
-      processed:
-        common:
-          ligands: "gtopdb_ligands.csv"
-          proteins: "gtopdb_proteins.csv"
-          interactions: "gtopdb_p-l_edges.csv"
-  feature_extractors:
-    protein:
-    extractor_function: "extract_esm_protein_embeddings"
-    model_name: "facebook/esm2_t30_150M_UR50D"
-    # 在GPU上进行特征提取时的批处理大小
-    batch_size: 32
-  molecule:
-    extractor_function: "extract_chemberta_molecule_embeddings"
-    model_name: "seyonec/ChemBERTa-zinc-base-v1"
-    batch_size: 64 # 通常可以比蛋白质的batch size更大
-
-params:
-  similarity_thresholds:
-    protein_protein: 0.8 # 对应 protein_protein_similarity
-    drug_drug: 0.988 # 对应 drug_drug_similarity
-    ligand_ligand: 0.988 # 对应 ligand_ligand_similarity, 复用同一个严格阈值
-    drug_ligand: 0.7 # 对应 drug_ligand_similarity, 使用一个更宽松的阈值
-
-  # --- 其他参数保持不变 ---
-  max_pp_edges: 500
-  gtopdb_max_affinity_nM: 10000
-  negative_sampling_strategy: "popular"
-  affinity_threshold_nM: 10000
-
-# --- 2. Global Parameters (that don't belong to a specific component) ---
-# These are mostly parameters for data processing and evaluation
-#会影响性能的参数放在这里
+#会影响训练性能的参数放在这里
 training:
   learning_rate: 0.0005
   epochs: 200
