--- a/conf/data_structure/bindingdb.yaml
+++ b/conf/data_structure/bindingdb.yaml
@@ -8,12 +8,9 @@ name: bindingdb
 root: "data"
 primary_dataset: "bindingdb"
 
-files:
-  raw:
-    # 原始下载的TSV压缩包内的文件名
-    raw_tsv: "BindingDB_All.tsv"
-    authoritative_dti: "bindingdb_interactions.csv"
-    dummy_file_to_get_dir: "dummy.txt"
+dataset_specific_filenames:
+  authoritative_dti: "bindingdb_interactions" # 注意：这里不带扩展名
+  raw_tsv: "BindingDB_All.tsv"
 
   # 【新增】在这里定义所有与BindingDB原始文件相关的列名
 schema:
