--- a/conf/relations/DPL_no_sim.yaml
+++ b/conf/relations/DPL_no_sim.yaml
@@ -1,5 +1,8 @@
 # This component defines the 'pure_interactions' configuration
 name: DPL_no_sim
+defaults:
+  - dataclass
+  - _self_
 flags:
       dp_interaction: true
       lp_interaction: true
