--- a/conf/relations/DPL_sim.yaml
+++ b/conf/relations/DPL_sim.yaml
@@ -1,9 +1,11 @@
 name: DPL_sim
-
+defaults:
+  - dataclass
+  - _self_
 flags:
-      dp_interaction: true
-      lp_interaction: true
-      pp_similarity: true
-      dd_similarity: true
-      dl_similarity: true
-      ll_similarity: true
+  dp_interaction: true
+  lp_interaction: true
+  pp_similarity: true
+  dd_similarity: true
+  dl_similarity: true
+  ll_similarity: true
