--- a/conf/relations/DP_no_sim.yaml
+++ b/conf/relations/DP_no_sim.yaml
@@ -1,8 +1,11 @@
 name: DP_no_sim
+defaults:
+  - dataclass
+  - _self_
 flags:
-        dp_interaction: true
-        lp_interaction: false
-        pp_similarity: false
-        dd_similarity: false
-        dl_similarity: false
-        ll_similarity: false
+  dp_interaction: true
+  lp_interaction: false
+  pp_similarity: false
+  dd_similarity: false
+  dl_similarity: false
+  ll_similarity: false
