--- a/conf/relations/DP_sim.yaml
+++ b/conf/relations/DP_sim.yaml
@@ -1,10 +1,12 @@
 # This component defines the 'pure_interactions' configuration
 name: DP_sim
-
+defaults:
+  - dataclass
+  - _self_
 flags:
-      dp_interaction: true
-      lp_interaction: false
-      pp_similarity: true
-      dd_similarity: true
-      dl_similarity: false
-      ll_similarity: false
+  dp_interaction: true
+  lp_interaction: false
+  pp_similarity: true
+  dd_similarity: true
+  dl_similarity: false
+  ll_similarity: false
